[metadata]
name=superinference
version=1.0.3
description=Superinference is a library that infers analysis-ready attributes from a person''s social media username or unique identifier and returns them as JSON objects.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
author=Timotius Marselo
author_email=timotiusmarselo@gmail.com

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

